// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validation.valueError calling error on a block provides a correct message 1`] = `
"There is a problem with the value of the element 'language'.

   Line | Content
      1 | 
      2 |       -- language
 >    3 |       eno
      4 |       -- language
      5 |     
"
`;

exports[`validation.valueError calling error on a block provides correct selection metadata 1`] = `
Array [
  Array [
    2,
    0,
  ],
  Array [
    2,
    9,
  ],
]
`;

exports[`validation.valueError calling error on a block providing a custom message provides a correct message 1`] = `
"a highly custom error

   Line | Content
      1 | 
      2 |       -- language
 >    3 |       eno
      4 |       -- language
      5 |     
"
`;

exports[`validation.valueError calling error on a block providing a custom message provides correct selection metadata 1`] = `
Array [
  Array [
    2,
    0,
  ],
  Array [
    2,
    9,
  ],
]
`;

exports[`validation.valueError calling error on a block providing an error function provides a correct message 1`] = `
"language can not be       eno

   Line | Content
      1 | 
      2 |       -- language
 >    3 |       eno
      4 |       -- language
      5 |     
"
`;

exports[`validation.valueError calling error on a block providing an error function provides correct selection metadata 1`] = `
Array [
  Array [
    2,
    0,
  ],
  Array [
    2,
    9,
  ],
]
`;

exports[`validation.valueError calling error on a field provides a correct message 1`] = `
"There is a problem with the value of the element 'language'.

   Line | Content
 >    1 | language: yaml
"
`;

exports[`validation.valueError calling error on a field provides correct selection metadata 1`] = `
Array [
  Array [
    0,
    10,
  ],
  Array [
    0,
    14,
  ],
]
`;

exports[`validation.valueError calling error on a field providing a custom message provides a correct message 1`] = `
" a highly custom error

   Line | Content
 >    1 | language: yaml
"
`;

exports[`validation.valueError calling error on a field providing a custom message provides correct selection metadata 1`] = `
Array [
  Array [
    0,
    10,
  ],
  Array [
    0,
    14,
  ],
]
`;

exports[`validation.valueError calling error on a field providing an error function provides a correct message 1`] = `
"language can not be yaml

   Line | Content
 >    1 | language: yaml
"
`;

exports[`validation.valueError calling error on a field providing an error function provides correct selection metadata 1`] = `
Array [
  Array [
    0,
    10,
  ],
  Array [
    0,
    14,
  ],
]
`;

exports[`validation.valueError calling error on a field with appendices provides a correct message 1`] = `
"There is a problem with the value of the element 'languages'.

   Line | Content
      1 | 
 >    2 |       languages:
 >    3 |       \\\\ eno
 >    4 |       \\\\ yaml
 >    5 |       |
 >    6 | 
 >    7 |       |
      8 |     
"
`;

exports[`validation.valueError calling error on a field with appendices provides correct selection metadata 1`] = `
Array [
  Array [
    1,
    16,
  ],
  Array [
    6,
    7,
  ],
]
`;

exports[`validation.valueError calling error on a field with appendices providing a custom message provides a correct message 1`] = `
"a highly custom error

   Line | Content
      1 | 
 >    2 |       languages:
 >    3 |       \\\\ eno
 >    4 |       \\\\ yaml
 >    5 |       |
 >    6 | 
 >    7 |       |
      8 |     
"
`;

exports[`validation.valueError calling error on a field with appendices providing a custom message provides correct selection metadata 1`] = `
Array [
  Array [
    1,
    16,
  ],
  Array [
    6,
    7,
  ],
]
`;

exports[`validation.valueError calling error on a field with appendices providing an error function provides a correct message 1`] = `
"languages can not be eno yaml

   Line | Content
      1 | 
 >    2 |       languages:
 >    3 |       \\\\ eno
 >    4 |       \\\\ yaml
 >    5 |       |
 >    6 | 
 >    7 |       |
      8 |     
"
`;

exports[`validation.valueError calling error on a field with appendices providing an error function provides correct selection metadata 1`] = `
Array [
  Array [
    1,
    16,
  ],
  Array [
    6,
    7,
  ],
]
`;

exports[`validation.valueError calling error on an empty block provides a correct message 1`] = `
"There is a problem with the value of the element 'language'.

   Line | Content
      1 | 
 >    2 |       -- language
 >    3 |       -- language
      4 |     
"
`;

exports[`validation.valueError calling error on an empty block provides correct selection metadata 1`] = `
Array [
  Array [
    1,
    17,
  ],
  Array [
    1,
    17,
  ],
]
`;

exports[`validation.valueError calling error on an empty block providing a custom message provides a correct message 1`] = `
"a highly custom error

   Line | Content
      1 | 
 >    2 |       -- language
 >    3 |       -- language
      4 |     
"
`;

exports[`validation.valueError calling error on an empty block providing a custom message provides correct selection metadata 1`] = `
Array [
  Array [
    1,
    17,
  ],
  Array [
    1,
    17,
  ],
]
`;

exports[`validation.valueError calling error on an empty block providing an error function provides a correct message 1`] = `
"language can not be null

   Line | Content
      1 | 
 >    2 |       -- language
 >    3 |       -- language
      4 |     
"
`;

exports[`validation.valueError calling error on an empty block providing an error function provides correct selection metadata 1`] = `
Array [
  Array [
    1,
    17,
  ],
  Array [
    1,
    17,
  ],
]
`;

exports[`validation.valueError calling error on an empty element provides a correct message 1`] = `
"There is a problem with the value of the element 'language'.

   Line | Content
 >    1 | language:
"
`;

exports[`validation.valueError calling error on an empty element provides correct selection metadata 1`] = `
Array [
  Array [
    0,
    9,
  ],
  Array [
    0,
    9,
  ],
]
`;

exports[`validation.valueError calling error on an empty element providing a custom message provides a correct message 1`] = `
"a highly custom error

   Line | Content
 >    1 | language:
"
`;

exports[`validation.valueError calling error on an empty element providing a custom message provides correct selection metadata 1`] = `
Array [
  Array [
    0,
    9,
  ],
  Array [
    0,
    9,
  ],
]
`;

exports[`validation.valueError calling error on an empty element providing an error function provides a correct message 1`] = `
"language can not be null

   Line | Content
 >    1 | language:
"
`;

exports[`validation.valueError calling error on an empty element providing an error function provides correct selection metadata 1`] = `
Array [
  Array [
    0,
    9,
  ],
  Array [
    0,
    9,
  ],
]
`;

exports[`validation.valueError provides a correct message 1`] = `
"'language' must be 'eno', not 'yaml'.

   Line | Content
 >    1 | language: yaml
"
`;

exports[`validation.valueError provides correct selection metadata 1`] = `
Array [
  Array [
    0,
    10,
  ],
  Array [
    0,
    14,
  ],
]
`;
